# family-quest-capstone

./: .gitignore  README.md  manage.py  pyproject.toml
directmessaging/: admin.py  apps.py  models.py
directmessaging/migrations/: 0001_initial.py  0002_message_sent_at.py  0003_alter_chat_messages.py  0004_alter_chat_messages.py
familystructure/: admin.py  apps.py  fields.py  forms.py  mixins.py  models.py  views.py
familystructure/migrations/: 0001_initial.py  0002_familycircle_name.py  0002_initial.py  0003_person_profile_photo.py
memberProfile/: apps.py  forms.py  models.py  views.py
register/: models.py
socialmedia/: admin.py  apps.py  base_models.py  forms.py  models.py  views.py
socialmedia/migrations/: 0001_initial.py  0002_alter_reaction_reaction_type.py  0002_auto_20211007_1925.py  0002_auto_20211008_1801.py  0002_initial.py  0003_auto_20211008_1602.py  (+12 more)
useraccount/: admin.py  forms.py  manager.py  models.py  views.py
webconfig/: asgi.py  settings.py  urls.py  wsgi.py
website/: base_views.py  forms.py  models.py  views.py
webtemplates/: 404.html  500.html  base.html  chat.html  chats.html  choose_person_form.html  circle_detail.html  circle_manage.html  create_post.html  fam_cir_post_detail.html  family_circle_posts.html  family_circles.html  family_members.html  family_navigator.html  family_posts.html  familycircle_detail.html  generic_form.html  generic_image.html  genericform.html  index.html  navbar.html  person_detail.html  person_list.html  post_detail.html  profile_detail.html  signup.html  style-example.html  user_detail.html
(+14 files in other folders)
