[tool.poetry]
name = "family-quest-capstone"
version = "0.1.0"
description = ""
authors = ["Gavin Ferise <gmferise@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
django-environ = "^0.7.0"
django-bootstrap5 = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
